# shawzinstring

./: LICENSE  README.md  analyze_differences.py  analyze_string.py  check_mapping.py  create_short_test.py  create_test_midi.py  debug_pentatonic.py  deep_analyze.py  demo_chord_handling.py  demo_key_detection.py  demo_midi_io.py  demo_pattern_detection.py  demo_quantization.py  fix_format.py  pyproject.toml  requirements.txt  sample_chord_dict.json  sample_scale_mapping.json  simple_melody.mid  simple_test.mid  test.txt  test_fixed.txt  test_real_midi.py  test_synthetic.mid  test_valid.mid  test_valid.txt  test_warframe_format.py  verify_string.py
demos/: demo_mapper.py
midi2shawzin/: __init__.py  chord_handling.py  cli.py  encoder.py  key_detection.py  mapper.py  metrics.py  midi_io.py  pattern_detection.py  quantize.py  shawzin_mapping.py
test_output/: simple_fixed  simple_result  warframe_chromatic  warframe_fixed
tests/: test_chord_handling.py  test_encoder.py  test_full_conversion.py  test_key_detection.py  test_mapper.py  test_mapping.py  test_metrics.py  test_midi_io.py  test_pattern_detection.py  test_quantize.py
